force-app/main/default/objects/Krow__Request__c/Krow__Request__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>