force-app/main/default/objects/Krow__Request__c/fields/Krow__Anticipated_Cost__c.field-meta.xml
<CustomField>
    <fullName>Krow__Anticipated_Cost__c</fullName>
    <label>Anticipated Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>