force-app/main/default/objects/Krow__Request__c/fields/Krow__Expected_Business_Value__c.field-meta.xml
<CustomField>
    <fullName>Krow__Expected_Business_Value__c</fullName>
    <label>Expected Business Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>