force-app/main/default/objects/Krow__Request__c/fields/Krow__Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Krow__Request_Details__c</fullName>
    <label>Request Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>