force-app/main/default/objects/Krow__Request__c/fields/Krow__Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Request_ID__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>Request ID</label>
    <type>AutoNumber</type>
</CustomField>