force-app/main/default/objects/Krow__Request__c/fields/Krow__Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Change Request</fullName>
                <default>true</default>
                <label>Change Request</label>
            </value>
            <value>
                <fullName>New Resource</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>